feat: implement server manager over api and listen server status over websocket

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   dev:
-    image: mcrunner-dev
-    container_name: mcrunner-dev
+    image: mcmanager-dev
+    container_name: mcmanager-dev
     build:
       context: .
       dockerfile: Dockerfile.dev
