--- a/web/jsconfig.json
+++ b/web/jsconfig.json
@@ -4,5 +4,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [".pnpm-store", "node_modules", "dist", "vscode-web"]
 }
