--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "npm run build-proto && vite build",
+    "build": "vite build",
     "build-vscode": "docker run --rm -u $(id -u):$(id -g) -v $PWD/dist/vscode:/workdir/vscode-web $(docker build -q $PWD/vscode-web)",
     "build-proto": "pbjs -t static-module -w es6 -o src/generated/message.js src/proto/message.proto && pbts -o src/generated/message.d.ts src/generated/message.js",
     "preview": "vite preview"
@@ -16,10 +16,13 @@
   "dependencies": {
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "axios": "^1.13.2",
     "lucide-vue-next": "^0.546.0",
     "protobufjs": "^7.5.4",
+    "serve-static": "^2.2.0",
     "vue": "^3.5.22",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@bufbuild/protobuf": "^2.10.0",
@@ -27,10 +30,10 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "protobufjs-cli": "^1.1.3",
+    "rimraf": "^6.1.0",
     "tailwindcss": "^3.4.18",
-    "vite": "^7.1.11",
-    "vite-plugin-vue-devtools": "^8.0.3",
     "ts-protoc-gen": "^0.15.0",
-    "rimraf": "^6.1.0"
+    "vite": "^7.1.11",
+    "vite-plugin-vue-devtools": "^8.0.3"
   }
 }
