--- a/web/package.json
+++ b/web/package.json
@@ -21,9 +21,11 @@
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
+    "@phosphor-icons/vue": "^2.2.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
     "apexcharts": "^4.4.0",
+    "axios": "^1.13.2",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
@@ -34,6 +36,7 @@
     "vue-kanban": "^1.8.0",
     "vue-router": "^4.5.0",
     "vue3-apexcharts": "^1.8.0",
+    "vue3-toastify": "^0.2.8",
     "vuedraggable": "^4.1.0",
     "vuevectormap": "^2.0.1"
   },
