--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,8 @@
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "golang.go",
-        "neonxp.gotools"
+        "tooltitudeteam.tooltitude-pb",
+        "tooltitudeteam.tooltitude"
       ]
     }
   },
