--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "build-vscode": "docker run --rm -u $(id -u):$(id -g) -v $PWD/dist/vscode:/workdir/vscode-web $(docker build -q $PWD/vscode-web)",
-    "build-proto": "pbjs -t static-module -w es6 -o src/generated/message.js src/proto/message.proto && pbts -o src/generated/message.d.ts src/generated/message.js"
+    "build-proto": "pbjs -t static-module -w es6 -o src/generated/message.js ../proto/message.proto && pbts -o src/generated/message.d.ts src/generated/message.js"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.15",
@@ -24,12 +24,15 @@
     "@phosphor-icons/vue": "^2.2.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "apexcharts": "^4.4.0",
     "axios": "^1.13.2",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
     "lucide-vue-next": "^0.474.0",
+    "protobufjs": "^7.5.4",
     "swiper": "^11.2.1",
     "vue": "^3.5.13",
     "vue-flatpickr-component": "^11.0.5",
@@ -55,6 +58,7 @@
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
+    "protobufjs-cli": "^1.1.3",
     "sass-embedded": "^1.83.4",
     "tailwindcss": "^4.0.0",
     "typescript": "~5.7.3",
