--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "@xterm/xterm": "^5.5.0",
     "apexcharts": "^4.4.0",
     "axios": "^1.13.2",
+    "blueimp-md5": "^2.19.0",
     "dropzone": "^6.0.0-beta.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.6.0",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
     "@tsconfig/node22": "^22.0.0",
+    "@types/blueimp-md5": "^2.18.2",
     "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
