--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,9 @@
 services:
-  mcmanger:
-    image: mcmanger
-    container_name: mcmanger
-    build:
-      context: .
-      dockerfile: Dockerfile
-    user: 1000:1000
-    volumes:
-      - ./:/workdir
-    environment:
-      - TZ=Asia/Ho_Chi_Minh
+  mcmanager:
+    image: registry.mineviet.com/mcmanager:latest
+    container_name: mcmanager
     ports:
       - "8080:8080"
-    network_mode: bridge
+    volumes:
+      - ./config.yaml:/app/config.yaml
+    
